Product category width alignment fix

--- a/design-system.css
+++ b/design-system.css
@@ -209,32 +209,15 @@
 }
 
 /* product list */
-.on-product-categories {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-}
 
 .on-product-category {
-  width: calc(33.33% - 20px); /* Adjust as needed */
-  margin-bottom: 20px;
+  width: calc(33.33% - 20px);
 }
 
 .on-product-category__image img {
   width: 100%;
   height: auto;
   border-radius: 10px;
-}
-
-.on-product-category__details {
-  padding: 10px;
-  background-color: #f5f5f5; /* Background color */
-}
-
-
-.on-pagination {
-  text-align: center;
-  margin-bottom: 50px;
 }
 
 .on-pagination__button {
@@ -247,7 +230,7 @@
 }
 
 .on-pagination__button:hover {
-  background-color: #f5f5f5;
+  background-color: var(--clr-primary);
 }
 
 /* --- */
